infra/app-of-apps/rancher/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    moonrepo.dev/skip-local: "true"
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - rancher.brandwhisper.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
